force-app/main/default/objects/Agent_Scorecard__c/Agent_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Agent Scorecard</label>
    <nameField>
        <label>Agent Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>