force-app/main/default/objects/Agent_Scorecard__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User</description>
    <label>Agent Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agent_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>