force-app/main/default/objects/Agent_Scorecard__c/fields/Case_Subject_Meaningful__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject_Meaningful__c</fullName>
    <inlineHelpText>Subjective Score: 1 = Worst 5 = Best</inlineHelpText>
    <label>Case Subject (Meaningful?)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score_1_5</valueSetName>
    </valueSet>
</CustomField>