force-app/main/default/objects/Agent_Scorecard__c/fields/Cause_Coded_Appropriately__c.field-meta.xml
<CustomField>
    <fullName>Cause_Coded_Appropriately__c</fullName>
    <label>Cause - Coded Appropriately?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>