force-app/main/default/objects/Agent_Scorecard__c/fields/Collecting_appropriate_details_Open_Q_s__c.field-meta.xml
<CustomField>
    <fullName>Collecting_appropriate_details_Open_Q_s__c</fullName>
    <label>Collecting appropriate details/Open Q&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>