force-app/main/default/objects/Agent_Scorecard__c/fields/Detail_Description__c.field-meta.xml
<CustomField>
    <fullName>Detail_Description__c</fullName>
    <inlineHelpText>Subjective Score: 1 = Worst 5 = Best</inlineHelpText>
    <label>Detail Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score_1_5</valueSetName>
    </valueSet>
</CustomField>