force-app/main/default/objects/Agent_Scorecard__c/fields/Did_analyst_adapt_style_to_suit_customer__c.field-meta.xml
<CustomField>
    <fullName>Did_analyst_adapt_style_to_suit_customer__c</fullName>
    <inlineHelpText>Subjective Score: 1 = Worst, 5 = Best</inlineHelpText>
    <label>Did analyst adapt style to suit customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score_1_5</valueSetName>
    </valueSet>
</CustomField>