force-app/main/default/objects/Agent_Scorecard__c/fields/Ensured_the_customer_Understands__c.field-meta.xml
<CustomField>
    <fullName>Ensured_the_customer_Understands__c</fullName>
    <label>Ensured the customer Understands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>