force-app/main/default/objects/Agent_Scorecard__c/fields/Feedback_Provided__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Provided__c</fullName>
    <label>Feedback Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>