force-app/main/default/objects/Agent_Scorecard__c/fields/Feedback_Score__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Score__c</fullName>
    <inlineHelpText>Comments or Score provided by the Customer</inlineHelpText>
    <label>Feedback Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>