force-app/main/default/objects/Agent_Scorecard__c/fields/Has_the_Analyst_Listened__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Analyst_Listened__c</fullName>
    <label>Has the Analyst Listened</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>