force-app/main/default/objects/Agent_Scorecard__c/fields/Have_we_answered_the_question__c.field-meta.xml
<CustomField>
    <fullName>Have_we_answered_the_question__c</fullName>
    <inlineHelpText>Have we answered the query, given advice/alternatives or offered a solution?
Subjective Score: 1 = Worst 8 = Best</inlineHelpText>
    <label>Have we answered the question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>