force-app/main/default/objects/Agent_Scorecard__c/fields/Have_we_sounded_empathetic_built_rapport__c.field-meta.xml
<CustomField>
    <fullName>Have_we_sounded_empathetic_built_rapport__c</fullName>
    <label>Have we sounded empathetic/built rapport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>