force-app/main/default/objects/Agent_Scorecard__c/fields/Hold_Mute_Appropriate_Use__c.field-meta.xml
<CustomField>
    <fullName>Hold_Mute_Appropriate_Use__c</fullName>
    <label>Hold/Mute Appropriate Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>