force-app/main/default/objects/Agent_Scorecard__c/fields/If_non_Community_User_Walkthrough__c.field-meta.xml
<CustomField>
    <fullName>If_non_Community_User_Walkthrough__c</fullName>
    <label>If non Community User (Walkthrough)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>