force-app/main/default/objects/Agent_Scorecard__c/fields/Is_Customer_confident_of_resolution__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_confident_of_resolution__c</fullName>
    <inlineHelpText>Does the customer sound confident that analyst can/will resolve issue?
Subjective Score: 1 = Worst 5 = Best</inlineHelpText>
    <label>Is Customer confident of resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score_1_5</valueSetName>
    </valueSet>
</CustomField>