force-app/main/default/objects/Agent_Scorecard__c/fields/Is_KBA_relevant__c.field-meta.xml
<CustomField>
    <fullName>Is_KBA_relevant__c</fullName>
    <label>Is KBA relevant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>