force-app/main/default/objects/Agent_Scorecard__c/fields/KB_Recommended__c.field-meta.xml
<CustomField>
    <fullName>KB_Recommended__c</fullName>
    <label>KB Recommended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>