force-app/main/default/objects/Agent_Scorecard__c/fields/Mention_of_Survey__c.field-meta.xml
<CustomField>
    <fullName>Mention_of_Survey__c</fullName>
    <label>Mention of Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>