force-app/main/default/objects/Agent_Scorecard__c/fields/Name_Given_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Name_Given_Analyst__c</fullName>
    <label>Name Given (Analyst)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>