force-app/main/default/objects/Agent_Scorecard__c/fields/Name_Used_Customers__c.field-meta.xml
<CustomField>
    <fullName>Name_Used_Customers__c</fullName>
    <label>Name Used (Customers)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>