force-app/main/default/objects/Agent_Scorecard__c/fields/Offer_of_Further_Help__c.field-meta.xml
<CustomField>
    <fullName>Offer_of_Further_Help__c</fullName>
    <label>Offer of Further Help</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>