force-app/main/default/objects/Agent_Scorecard__c/fields/Pass_Fail_Call__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail_Call__c</fullName>
    <formula>IF( Score_percentage_Call__c  &gt; 0.90, &quot;PASS&quot; , &quot;FAIL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass/Fail (Call)</label>
    <type>Text</type>
</CustomField>