force-app/main/default/objects/Agent_Scorecard__c/fields/Pass_Fail_Case__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail_Case__c</fullName>
    <formula>IF(  Score_percentage_Case__c &gt; 0.90, &quot;PASS&quot; , &quot;FAIL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass/Fail (Case)</label>
    <type>Text</type>
</CustomField>