force-app/main/default/objects/Agent_Scorecard__c/fields/Prevention_Filled_appropriate__c.field-meta.xml
<CustomField>
    <fullName>Prevention_Filled_appropriate__c</fullName>
    <label>Prevention - Filled &amp; appropriate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>