force-app/main/default/objects/Agent_Scorecard__c/fields/Professional_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Professional_Introduction__c</fullName>
    <inlineHelpText>Subjective Score - 1 = Worst, 5 = Best</inlineHelpText>
    <label>Professional Introduction?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score_1_5</valueSetName>
    </valueSet>
</CustomField>