force-app/main/default/objects/Agent_Scorecard__c/fields/Public_Comments__c.field-meta.xml
<CustomField>
    <fullName>Public_Comments__c</fullName>
    <label>Public Comments?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>