force-app/main/default/objects/Agent_Scorecard__c/fields/Reference_to_Portal_Community__c.field-meta.xml
<CustomField>
    <fullName>Reference_to_Portal_Community__c</fullName>
    <label>Reference to Portal/Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>