force-app/main/default/objects/Agent_Scorecard__c/fields/Related_case__c.field-meta.xml
<CustomField>
    <fullName>Related_case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Agent Scorecards</relationshipLabel>
    <relationshipName>Agent_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>