force-app/main/default/objects/Agent_Scorecard__c/fields/Relevant_Update__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Update__c</fullName>
    <inlineHelpText>Subjective Score: 1 = Worst 6 = Best</inlineHelpText>
    <label>Relevant Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>