force-app/main/default/objects/Agent_Scorecard__c/fields/Score_Case__c.field-meta.xml
<CustomField>
    <fullName>Score_Case__c</fullName>
    <description>Questions where the option N/A is chosen are given the maximum score</description>
    <formula>CASE( Case_Origin__c ,                        &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Case_Source__c ,                        &quot;Yes&quot;, 8, &quot;No&quot;, 0,0)+
CASE( Case_Type__c ,                          &quot;Yes&quot;, 8, &quot;No&quot;, 0,0)+
CASE( Related_Product__c ,                    &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Sub_Analysis__c ,                       &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Case_Status__c ,                        &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Case_Priority__c ,                      &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Contact_Name__c ,                       &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Contact_Email__c ,                      &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Contact_Phone_Mobile__c ,               &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Contact_Entitlement__c ,                &quot;Yes&quot;, 8, &quot;No&quot;, 0,0)+
CASE( Contact_Against_Entitlement__c ,        &quot;Yes&quot;, 8, &quot;No&quot;, 0,0)+
CASE( Timely_Within_SLA__c ,                  &quot;Yes&quot;, 8, &quot;No&quot;, 0,0)+
CASE( KB_Attached__c ,                        &quot;Yes&quot;, 5, &quot;No&quot;, 0,5)+
CASE( Is_KBA_relevant__c ,                    &quot;Yes&quot;, 5, &quot;No&quot;, 0,5)+
CASE( KB_Recommended__c ,                     &quot;Yes&quot;, 5, &quot;No&quot;, 0,5)+
CASE( Feedback_Provided__c ,                  &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Cause_Coded_Appropriately__c ,          &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Solution_Coded_Appropriately__c ,       &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+
CASE( Prevention_Filled_appropriate__c ,      &quot;Yes&quot;, 6, &quot;No&quot;, 0,0)+
CASE(  Public_Comments__c ,                   &quot;Yes&quot;, 5, &quot;No&quot;, 0,0)+



VALUE( TEXT ( Case_Subject_Meaningful__c ))+
VALUE( TEXT ( Detail_Description__c ))+
VALUE( TEXT ( Case_Comments__c ))+
VALUE( TEXT ( Solution__c ))+
VALUE( TEXT ( Relevant_Update__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Questions where the option N/A is chosen are given the maximum score</inlineHelpText>
    <label>Score (Case)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>