force-app/main/default/objects/Agent_Scorecard__c/fields/Score_percentage_Call__c.field-meta.xml
<CustomField>
    <fullName>Score_percentage_Call__c</fullName>
    <formula>Score_Call__c /125</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score % (Call)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>