force-app/main/default/objects/Agent_Scorecard__c/fields/Score_percentage_Case__c.field-meta.xml
<CustomField>
    <fullName>Score_percentage_Case__c</fullName>
    <formula>Score_Case__c /147</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score % (Case)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>