force-app/main/default/objects/Agent_Scorecard__c/fields/Sounding_Confident_Positive_Words__c.field-meta.xml
<CustomField>
    <fullName>Sounding_Confident_Positive_Words__c</fullName>
    <label>Sounding Confident/Positive Words</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>