force-app/main/default/objects/Agent_Scorecard__c/fields/Sub_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Sub_Analysis__c</fullName>
    <label>Sub-Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>