force-app/main/default/objects/Agent_Scorecard__c/fields/Summarised_Issue_Solution_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Summarised_Issue_Solution_Next_Steps__c</fullName>
    <label>Summarised Issue/Solution/Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>