force-app/main/default/objects/Agent_Scorecard__c/fields/Target_Score_Call__c.field-meta.xml
<CustomField>
    <fullName>Target_Score_Call__c</fullName>
    <defaultValue>&quot;Maximum Score possible is 125 - Target is 90%&quot;</defaultValue>
    <label>Target Score (Call)</label>
    <type>TextArea</type>
</CustomField>