force-app/main/default/objects/Agent_Scorecard__c/fields/Target_Score_Case__c.field-meta.xml
<CustomField>
    <fullName>Target_Score_Case__c</fullName>
    <defaultValue>&quot;Target is 90%&quot;</defaultValue>
    <label>Target Score (Case)</label>
    <type>TextArea</type>
</CustomField>