force-app/main/default/objects/Agent_Scorecard__c/fields/Timely_Within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Timely_Within_SLA__c</fullName>
    <label>Timely (Within SLA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>