force-app/main/default/objects/Agent_Scorecard__c/fields/Understood_the_Priority_and_Impact__c.field-meta.xml
<CustomField>
    <fullName>Understood_the_Priority_and_Impact__c</fullName>
    <label>Understood the Priority and Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>