force-app/main/default/objects/Agent_Scorecard__c/fields/Use_of_Names_Analyst_Customer__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Names_Analyst_Customer__c</fullName>
    <label>Use of Names (Analyst &amp; Customer)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>