force-app/main/default/objects/Agent_Scorecard__c/recordTypes/Call_Scorecard.recordType-meta.xml
<RecordType>
    <fullName>Call_Scorecard</fullName>
    <active>true</active>
    <label>Call Scorecard</label>
</RecordType>