force-app/main/default/objects/Agent_Scorecard__c/recordTypes/Case_Scorecard.recordType-meta.xml
<RecordType>
    <fullName>Case_Scorecard</fullName>
    <active>true</active>
    <label>Case Scorecard</label>
</RecordType>